add_subdirectory(maxconnection)
add_subdirectory(idleconnection)
add_subdirectory(netty/discard)
add_subdirectory(hub)
add_subdirectory(http)
add_subdirectory(log)
add_subdirectory(chargen)
add_subdirectory(procmon)
add_subdirectory(memcached/server/)
add_subdirectory(chat)
add_subdirectory(socks4a)
